--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,91 +2,61 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Samuel ROESLIN
     - name: Date of Birth
-      value: 14th March 1879
+      value: 28th March 1992
     - name: Languages
-      value: English, German
+      value: French, English, German
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Doctor of Philosophy (PhD)
+      institution: The University of Auckland, Auckland, New Zealand
+      year: 2022
       description:
-        - Description 1.
+        - Civil Engineering
         - Description 2.
         - title: Description 3.
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: Master of Engineering
+      institution: Regensburg University of Applied Sciences, Regensburg, Germany
+      year: 2016
       description:
-        - Description 1.
+        - Civil Engineering
         - Description 2.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
+    - title: Scientific Project Officer
       institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+      year: 2023 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+        - Computation of disaster risk for Europe using information on hazard, exposure, and vulnerability
+        - Collection, harmonisation, and disaggregation of historical disaster loss data in Europe
+        - Scientific work and dissemination of information related to the Risk Data Hub (RDH)
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2021
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - 1st place at TakiWaehere - The New Zealand Geospatial Hackathon - Team the AUNTS
+    - year: 2015
       items:
-        - Max Planck Medal
+        - Scholarship - Otto Helmut und Alice Eckl Foundation
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Disaster Risk
       items:
         - Description 1.
         - Description 2.
-    - title: Topic 2.
+    - title: Disaster losses and damages
       items:
         - Description 1.
         - Description 2.
